fixed results page for iphone8 and plus on safari, css at line 400

--- a/style.css
+++ b/style.css
@@ -396,8 +396,11 @@ h2 {
 }
 .tempBox {
     /*border: 1px solid black;*/
-    height: 88%;
-    width: 9%;
+    
+    /* height: 88%;           
+    width: 9%; */
+    height: 80%;
+    width: 50%;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
